--- a/src/components/SidebarContent.css
+++ b/src/components/SidebarContent.css
@@ -1,3 +1,7 @@
 .sidebarContent {
-    padding: 20px;
+  @apply p-2 pl-4 rounded-md m-2 hover:bg-gray-200 dark:hover:bg-gray-600;
+}
+
+.sidebarContentSelected {
+  @apply bg-gray-200 dark:bg-gray-600;
 }
