--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,26 @@
-/* TODO: Use Tailwind */
-/* @tailwind base;
+@tailwind base;
 @tailwind components;
-@tailwind utilities; */
+@tailwind utilities;
 
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+@layer base {
+  body {
+    @apply bg-white dark:bg-gray-800 dark:text-white;
+  }
+  form {
+    @apply rounded-lg bg-gray-100
+      dark:bg-gray-700 dark:text-white
+        drop-shadow-md;
+  }
+  p {
+    @apply text-base;
+  }
+  h1 {
+    @apply text-4xl font-bold mt-9 mb-1;
+  }
+  h2 {
+    @apply text-2xl font-bold mt-9 mb-1;
+  }
+  h3 {
+    @apply text-xl font-bold my-1;
+  }
 }
