--- a/src/components/Menubar.css
+++ b/src/components/Menubar.css
@@ -1,5 +1,5 @@
 #menubar {
-    @apply flex flex-row justify-end py-2 mx-5 place-items-center border-b-2;
+    @apply flex flex-row justify-end py-2 mx-5 place-items-center border-b-2 dark:border-gray-500;
 }
 
 #menubar > * {
