--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,9 @@
   p {
     @apply text-base;
   }
+  p:not(:first-child) {
+    @apply mt-4 mb-1;
+  }
   h1 {
     @apply text-4xl font-bold;
   }
