--- a/src/components/Layout.css
+++ b/src/components/Layout.css
@@ -1,10 +1,12 @@
 #layout {
-  display: flex;
-  flex-direction: row;
+  /* display: flex;
+  flex-direction: row; */
+  @apply flex flex-row h-screen w-screen;
 }
 
 #layoutContent {
-  display: flex;
+  @apply flex flex-col flex-grow overflow-auto;
+  /* display: flex;
   flex-direction: column;
-  flex-grow: 1;
+  flex-grow: 1; */
 }
