Removed minimum width from Page and Layout components

--- a/src/components/Layout.css
+++ b/src/components/Layout.css
@@ -3,5 +3,5 @@
 }
 
 #layoutContent {
-  @apply flex flex-col flex-grow overflow-y-auto min-w-[500px] !important;
+  @apply flex flex-col flex-grow overflow-y-auto !important;
 }
