--- a/src/components/Page.css
+++ b/src/components/Page.css
@@ -1,3 +1,3 @@
 #page {
-  @apply flex-grow px-5 pt-5 pb-2 h-screen overflow-y-scroll min-w-[500px] !important;
+  @apply flex-grow px-5 pt-5 pb-2 h-screen overflow-y-scroll !important;
 }
