--- a/src/components/Slider.css
+++ b/src/components/Slider.css
@@ -1,15 +1,15 @@
 .slider {
-  @apply flex flex-row align-middle justify-between m-1 p-2 bg-white dark:bg-gray-800 rounded-md !important;
-}
-
-.slider > span:nth-child(1) {
-  @apply ml-1 flex align-middle justify-center !important;
-}
-
-.slider > span:nth-child(3) {
-  @apply w-8 mr-1 flex align-middle justify-center text-center !important;
+  @apply flex flex-row align-middle justify-between m-1 py-2 px-4 bg-white dark:bg-gray-800 rounded-md !important;
 }
 
 .slider > input[type="range"] {
-  @apply mt-[3px] !important;
+  @apply mt-[1.5px] !important;
+}
+
+.slider > div {
+  @apply flex flex-row align-middle justify-evenly text-center !important;
+}
+
+.slider > div > span:nth-child(2) {
+  @apply ml-1 w-[24px] !important;
 }
