Tweaked styling of auth component

--- a/src/components/Authentication.css
+++ b/src/components/Authentication.css
@@ -12,6 +12,10 @@
   @apply rounded-md drop-shadow-none bg-gray-100 dark:bg-gray-700 !important;
 }
 
+#authDiv .firebaseui-card-header {
+  @apply rounded-none !important;
+}
+
 #authDiv button {
   @apply rounded-md !important;
 }
