GraphicsScene controls form a grid if there is enough horizontal space

--- a/src/components/Checkbox.css
+++ b/src/components/Checkbox.css
@@ -1,5 +1,5 @@
 .checkbox {
-  @apply flex flex-row align-middle justify-between max-w-[500px] mx-auto my-1 py-2 px-4 bg-white dark:bg-gray-800 rounded-md !important;
+  @apply flex flex-row align-middle justify-between !important;
 }
 
 .checkbox > input[type="checkbox"] {
@@ -7,5 +7,5 @@
 }
 
 .checkbox > span {
-  @apply m-1 !important;
+  @apply m-1 my-auto !important;
 }
