--- a/src/components/GraphicsScene.css
+++ b/src/components/GraphicsScene.css
@@ -7,13 +7,13 @@
 }
 
 .graphicsSceneControls {
-  @apply lg:grid lg:grid-cols-2;
+  @apply xl:grid xl:grid-cols-2;
 }
 
 .graphicsSceneControls > * {
-  @apply max-w-[500px] lg:w-[350px] mx-auto mb-2 py-2 px-4 bg-white dark:bg-gray-800 rounded-md !important;
+  @apply max-w-[500px] xl:w-[400px] mx-auto mb-2 py-2 px-4 bg-white dark:bg-gray-800 rounded-md !important;
 }
 
 .graphicsSceneControls > *:not(:last-child) {
-  @apply mb-4 lg:mb-2 !important;
+  @apply mb-4 xl:mb-2 !important;
 }
