--- a/src/components/GraphicsScene/Dropdown.css
+++ b/src/components/GraphicsScene/Dropdown.css
@@ -3,7 +3,7 @@
 }
 
 .dropdown > select {
-  @apply mx-1 my-auto rounded-md p-1 focus:outline-none dark:bg-gray-700 !important;
+  @apply mx-1 my-auto rounded-md p-1 focus:outline-none bg-gray-200 dark:bg-gray-700 !important;
 }
 
 .dropdown > span {
