--- a/src/components/graphics/GraphicsScene.css
+++ b/src/components/graphics/GraphicsScene.css
@@ -25,3 +25,7 @@
 .graphicsSceneControls > *:not(:last-child) {
   @apply mb-4 xl:mb-2 !important;
 }
+
+#VRButton {
+  @apply relative z-10 my-3 bottom-0 !important;
+}
