Added empty pages

--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -7,7 +7,7 @@
 }
 
 #sidebarContent {
-  @apply flex flex-col flex-grow overflow-y-hidden;
+  @apply flex flex-col flex-grow overflow-y-scroll;
 }
 
 #sidebarHeader {
