--- a/src/components/Image.css
+++ b/src/components/Image.css
@@ -1,5 +1,5 @@
 .image {
-  @apply flex flex-col justify-center align-middle m-2 my-5 p-2 w-max mx-auto bg-black rounded-md shadow-md shadow-black text-white;
+  @apply max-w-full flex flex-col justify-center align-middle m-2 my-5 p-2 w-max mx-auto bg-black rounded-md shadow-md shadow-black text-white;
 }
 
 .image > label {
@@ -7,5 +7,5 @@
 }
 
 .image > img {
-    @apply rounded-md;
+  @apply rounded-md max-w-full;
 }
