--- a/src/index.css
+++ b/src/index.css
@@ -2,13 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300&display=swap");
-
-@font-face {
-  font-family: "NotoSans";
-  src: url("./fonts/NotoSans-Regular.ttf");
-}
-
 @layer base {
   body {
     @apply bg-white dark:bg-gray-800 dark:text-white;
@@ -41,6 +34,9 @@
   }
   h3:not(:first-child) {
     @apply mt-9 mb-1;
+  }
+  code {
+    @apply font-mono;
   }
 }
 
