--- a/src/components/HighlightBlock.css
+++ b/src/components/HighlightBlock.css
@@ -1,3 +1,3 @@
 .highlightBlock {
-  @apply bg-gray-200 dark:bg-gray-700 p-2 inline-block rounded-md font-semibold font-mono;
+  @apply bg-gray-200 dark:bg-gray-700 p-3 mt-2 block rounded-md font-semibold font-mono;
 }
