--- a/src/components/graphics/GraphicsScene.css
+++ b/src/components/graphics/GraphicsScene.css
@@ -2,27 +2,39 @@
   @apply rounded-md bg-black shadow-md shadow-black my-5 p-4 !important;
 }
 
-.graphicsSceneMount {
+.graphicsScene > .graphicsSceneMount {
   @apply mx-auto mb-4 h-[350px] !important;
 }
 
-.graphicsSceneMount > canvas {
+.graphicsScene > .graphicsSceneMount > canvas {
   @apply rounded-md;
 }
 
-.controlGrid {
+.graphicsScene > .note {
+  @apply text-gray-400 text-sm text-center mb-4 flex flex-row align-middle justify-center self-center;
+}
+
+.graphicsScene > .note > .noteInfoIcon {
+  @apply flex align-middle justify-center font-bold italic w-[25px] h-[25px] rounded-full px-1 mr-2 text-center border-2 border-gray-400 !important;
+}
+
+.graphicsScene > .note > .noteText {
+  @apply flex align-middle justify-center self-center;
+}
+
+.graphicsScene > .controlGrid {
   @apply xl:grid xl:grid-cols-2;
 }
 
-.controlGrid > * {
+.graphicsScene > .controlGrid > * {
   @apply xl:w-[400px] select-none;
 }
 
-.graphicsSceneControls > * {
+.graphicsScene > .graphicsSceneControls > * {
   @apply max-w-[500px] mx-auto mb-2 py-2 px-4 bg-white dark:bg-gray-800 rounded-md !important;
 }
 
-.graphicsSceneControls > *:not(:last-child) {
+.graphicsScene > .graphicsSceneControls > *:not(:last-child) {
   @apply mb-4 xl:mb-2 !important;
 }
 
