--- a/src/index.css
+++ b/src/index.css
@@ -58,6 +58,11 @@
   }
 }
 
+p > a,
+li > a {
+  @apply text-blue-500 hover:dark:text-blue-100 hover:text-blue-800 hover:underline;
+}
+
 #root {
   @apply h-screen;
 }
